# gode

./: .gitignore  .gitmodules  CHANGELOG-ZH.md  CHANGELOG.md  CMakeLists.txt  FORME.md  LICENSE  README-ZH.md  README.md
.github/shell/: package-plugin.sh  prepare-libnode.sh
.github/workflows/: build-plugin.yml  build.yml  release.yml
code_generator/: README.md  generator.py
code_generator/builtin/: builtin_classes_generator.py
code_generator/class/: class_generator.py
code_generator/core/: __init__.py
code_generator/dts/: dts_generator.py
code_generator/register/: register_generator.py  utility_functions_generator.py
code_generator/templates/: builtin_binding.cpp.jinja2  builtin_binding.h.jinja2  builtin_vararg_method.h.jinja2  class_binding.cpp.jinja2  class_binding.h.jinja2  class_vararg_method.h.jinja2  register_builtin.cpp.jinja2  register_builtin.h.jinja2  register_classes.cpp.jinja2  register_classes.h.jinja2  utility_functions.cpp.jinja2
example/: .gitignore  example-ai-config.json  export_presets.cfg  icon.png.import  icon.svg.import  logo.png.import  package-lock.json  package.json  project.godot  tsconfig.json
example/addons/gode/: gode.gd  gode.gd.uid  init.bat  init.sh  plugin.cfg
example/addons/gode/binary/: .gdextension  .gdextension.uid  gode.gdextension  gode.gdextension.uid
example/addons/gode/core/: ExportEntry.d.ts  globals.d.ts  godot.d.ts
example/addons/gode/icons/: javascript.svg.import  typescript.svg.import
example/addons/gode/runtime/: event_loop.gd  event_loop.gd.uid
example/addons/gode/script/: event_loop.gd.uid
example/resources/: new_tile_set.tres
example/resources/cell/: hexagon-0.png.import  hexagon-1.png.import
example/resources/maps/: N44 Map-2015-FINAL-150.jpg.import
example/scene/: node_2d.tscn  test_runner.tscn
example/scenes/: editor.tscn  main_menu.tscn  signal_test.tscn  test_workspace.tscn  tests_runner.tscn
example/script/: MyNode.js  NewScript.js  TestExport.js  UnitTest.js  UnitTestTS.ts
example/scripts/: Test.ts  battle_ai_editor_demo.ts  main_menu.js  test_catalog.js  test_selection.js  test_workspace.js
generator/: README.md
generator/builtin/: builtin_classes_generator.py
generator/class/: class_generator.py
generator/core/: base_generator.py
generator/dts/: dts_generator.py
generator/register/: register_generator.py  utility_functions_generator.py
generator/templates/: builtin_binding.cpp.jinja2  builtin_binding.h.jinja2  class_binding.cpp.jinja2  class_binding.h.jinja2  register_builtin.cpp.jinja2  register_builtin.h.jinja2  register_classes.cpp.jinja2  register_classes.h.jinja2  utility_functions.cpp.jinja2  utility_functions.h.jinja2  utility_functions_vararg.h.jinja2
generator/utils/: api_path.py  string_utils.py
include/: register_types.h
include/register/utility_functions/: utility_functions.h  utility_functions_vararg_method.h
include/support/javascript/: javascript.h  javascript_callable.h  javascript_instance.h  javascript_instance_info.h  javascript_language.h  javascript_loader.h  javascript_saver.h  script_module.h
include/support/typescript/: typescript.h  typescript_language.h  typescript_loader.h  typescript_saver.h
include/tests/: test_runner.h
include/utils/: func_utils.h  gode_event_loop.h  node_runtime.h  value_convert.h  vararg_macros.h  variant_wrapped.h
shell/: build-android.ps1  build-android.sh  build-ios.sh  build-linux.sh  build-macos.sh  build-windows.ps1  package-plugin.ps1  prepare-libnode.ps1
src/: register_types.cpp
src/register/utility_functions/: utility_functions.cpp
src/support/javascript/: javascript.cpp  javascript_callable.cpp  javascript_instance.cpp  javascript_instance_info.cpp  javascript_language.cpp  javascript_loader.cpp  javascript_saver.cpp
src/support/typescript/: typescript.cpp  typescript_language.cpp  typescript_loader.cpp  typescript_saver.cpp
src/tests/: test_runner.cpp
src/utils/: gode_event_loop.cpp  node_runtime.cpp  value_convert.cpp  variant_wrapped.cpp
